policy/gatekeeper/testdata/suite/pod-labelled.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: dev
  labels:
    owner: platform
spec:
  containers:
    - name: nginx
      image: nginx:1.27
