policy/gatekeeper/testdata/suite/pod-malformed-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: dev
  labels:
    owner: Platform-1
spec:
  containers:
    - name: nginx
      image: nginx:1.27
