policy/gatekeeper/testdata/suite/pod-unlabelled.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: dev
  labels:
    team: platform
spec:
  containers:
    - name: nginx
      image: nginx:1.27
